# dyconnmap

./: .directory  .gitignore  .readthedocs.yml  .travis.yml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  INSTALL.md  LICENSE  LICENSE.txt  README.md  TODO.md  environment.yml  package.json  postBuild  pyproject.toml  requirements.txt  requirements_36.txt  setup.cfg  setup.py  setup_tag.py  template_file.py  tox.ini  upload_to_pypi.md
.github/: dependabot.yml
docs/: Makefile  conf.py  dyconnmap.cluster.rst  dyconnmap.rst  dyconnmap.sim_models.rst  dyfunconn.chronnectomics.rst  dyfunconn.cluster.rst  dyfunconn.fc.rst  dyfunconn.graphs.rst  dyfunconn.rst  dyfunconn.sim_models.rst  dyfunconn.ts.rst  index.rst  make.bat
dyconnmap/: .flake8  bands.py  dataset.py  sliding_window.py  tvfcgs.py
dyfunconn/: __init__.py  analytic_signal.py  bands.py  sliding_window.py  tvfcgs.py
examples/: cluster_ng.py  cluster_som.py  fc_aec.py  fc_coherence.py  fc_corr.py  fc_dpli.py  fc_esc.py  fc_glm.py  fc_iplv.py  fc_mi.py  fc_mui.py  fc_nesc.py  fc_pac.py  fc_pcoh.py  fc_pec.py  fc_pli.py  fc_plv.py  fc_si.py  fc_sl.py  fc_wpli.py  fcmicrostates.py  graphs_gdd.py  graphs_mi.py  graphs_nodal.py  graphs_vi.py  microstates.py  modwt.py  plot_channels.py  plot_connectivity.py  python_comodulogram.py  python_mp.py  python_phasesync_user-defined_estimator.py  python_try_new_class_system.py  sim_models_maniken.py  sliding_window1.py  ts_ci.py  ts_embed_delay.py  ts_markov_matrix.py  ts_sampen.py  ts_surrogates.py  (+5 more)
logo/: github_banner.xcf  logo_640.xcf
tests/: README.md  test_chronnectomics.py  test_clustering.py  test_clustering_validity.py  test_fc.py  test_graphs.py  test_graphs_threshold.py  test_sliding_window.py  test_ts.py  test_tvfcgs.py
tutorials/: .gitignore  0 - Dump EEG.ipynb  0 - Retrieve and parse EEG.ipynb  0 - Retrieve and parse fMRI.ipynb  1 - Introductory tutorial.ipynb  2 - Static Connectivity.ipynb  3 - Dynamic Connectivity.ipynb  (+16 more)
(+458 files in other folders)
