[project]
name = "dyconnmap"
#version = "0.1.0"
description = "A dynamic connectome mapping module in Python"
authors = [
    "Avraam Marimpis <avraam.marimpis@gmail.com>",
    "Stavros Dimitriadis",
]
license = "BSD-3"
readme = "README.md"
python = "^3.6"
homepage = "https://github.com/makism/dyconnmap"
repository = "https://github.com/makism/dyconnmap"
documentation = "https://dyconnmap.readthedocs.io/en/latest/?badge=latest"

keywords = ["eeg", "fMRI", "meg", "connectivity", "graphs", "neuroimage", "brain"]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python :: 3.6",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved",
  "Topic :: Software Development",
  "Topic :: Scientific/Engineering",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Operating System :: Unix",
  "Operating System :: MacOS",
]

[dependencies]
python = "^3.6"
nose = "^1.3.7"
coveralls
codacy-coverage
coverage
codecov
numpy = "^1.16.1"
scipy = "^1.3.1"
matplotlib = "^3.1.1"
networkx = "^2.3"
statsmodels = "^0.10.1"
scikit-learn= "^0.21.3"
bctpy = "^0.5.0"
Sphinx = "^2.2.0"
sphinx-rtd-theme = "^0.4.3"

#[dev-dependencies]
#black = { version = "^18.3-alpha.0", python = "^3.6" }

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

#[tool.black]
#line-length = 88
#target_version = ['py36']
#include = '\.pyi?$'
#exclude = '''
#
#(
#  /(
#      \.eggs         # exclude a few common directories in the
#    | \.git          # root of the project
#    | \.hg
#    | \.mypy_cache
#    | \.tox
#    | \.venv
#    | _build
#    | buck-out
#    | build
#    | dist
#  )/
#  | foo.py           # also separately exclude a file named foo.py in
#                     # the root of the project
#)
#'''
